# algodog

./: .config  .gitignore  CMakeLists.txt  build.sh  main.cpp
include/: balanceControl.h  gait.h  inverseKinetic.h  legKinetic.h  moduleIO.h  thirdparties.h  utils.h
src/: balanceControl.cpp  gait.cpp  inverseKinetic.cpp  legKinetic.cpp  moduleIO.cpp  utils.cpp
